gazm-plugin/treesitter-gazm/grammar.js
        source_file: $ =>
            repeat(choice(
                $.long_doc,
                $.doc,
                $.comment,
                $.macro_def,
                $.struct_def,
                $.repeat,
                $.if_statement,
                $.while_statement,
                $.for_statement,
                $.break_statement,
                $.continue_statement,
                $._line
            )),

        fdb: $ => seq(asRegex( 'fdb' ), commaSep1($._expression)),
        fcb: $ => seq(asRegex( 'fcb' ), commaSep1($._expression)),
        rmb: $ => seq(asRegex( 'rmb' ), $._expression),

        struct_def: $ => seq(
            "struct", $._identifier, '{',
            // Fields are line-based (`field : type` per line); commas are
            // accepted for back-compat but not required.
            repeat(seq($.struct_elem, optional(','))),
            '}'),
        struct_elem: $ => seq($._identifier, ':', $.elem_type),
        elem_type: $ => seq(choice('byte', 'word', 'dword', 'qword'), optional($.array)),
        array: $ => seq('[', $._expression, ']'),

        macro_def: $ => seq("macro", $._identifier, $.macro_args, $.macro_body),
        macro_args: $ => seq('(', commaSep($._identifier), ')'),
        macro_body: $ => seq('{', repeat($._block_content), '}'),

        // `repeat <count> [, <index>] { body }` — assembled `count` times,
        // with the optional index bound to the 0-based iteration. A block
        // construct like macro/struct, so it can nest and appear inside
        // macro bodies.
        //
        // The keyword is matched as a plain identifier, not a reserved
        // token: in the language `repeat` is only special in statement
        // position, and robotron uses REPEAT as a data symbol (`REPEAT:`
        // labels, `FCB REPEAT+6`). Reserving it here would break those.
        // The `keyword` field exists so queries can still highlight it.
        repeat: $ => seq(
            field('keyword', $._identifier),
            field('count', $._expression),
            optional(seq(',', field('index', $._identifier))),
            $.repeat_body
        ),

        repeat_body: $ => seq('{', repeat($._block_content), '}'),

        // ----- Control flow ------------------------------------------------
        //
        // Bare keywords: matched by text in statement position only, so
        // symbols with the same spelling keep working elsewhere (same rule
        // as `repeat`). The keyword rules are named so queries can
        // highlight them and so the constructs stay text-distinct from
        // each other.

        if_keyword: $ => asRegex('if'),
        else_keyword: $ => asRegex('else'),
        while_keyword: $ => asRegex('while'),
        for_keyword: $ => asRegex('for'),
        break_keyword: $ => asRegex('break'),
        continue_keyword: $ => asRegex('continue'),

        if_statement: $ => seq(
            field('keyword', $.if_keyword),
            field('condition', $._expression),
            $.block,
            optional($.else_clause),
        ),

        else_clause: $ => seq(
            field('keyword', $.else_keyword),
            choice($.if_statement, $.block),
        ),

        while_statement: $ => seq(
            field('keyword', $.while_keyword),
            field('condition', $._expression),
            $.block,
        ),

        for_statement: $ => seq(
            field('keyword', $.for_keyword),
            field('index', $._identifier),
            asRegex('in'),
            field('start', $._expression),
            '..',
            field('end', $._expression),
            $.block,
        ),

        break_statement: $ => seq(field('keyword', $.break_keyword)),
        continue_statement: $ => seq(field('keyword', $.continue_keyword)),

        block: $ => seq('{', repeat($._block_content), '}'),

        // Anything a block body can contain (macro, repeat, and control
        // flow bodies all share it).
        _block_content: $ => choice(
            $.comment,
            $.macro_def,
            $.struct_def,
            $.repeat,
            $.if_statement,
            $.while_statement,
            $.for_statement,
            $.break_statement,
            $.continue_statement,
            $._line,
        ),

        doc_text : $ => /(\\(.|\r?\n)|[^\\\n])*/,
        doc: $ => seq(';;;', $.doc_text),

        long_doc_text : $ => /[^\]]*/,
        long_doc : $ => prec(PREC.LONG_DOC,seq('[[', $.long_doc_text, ']]')),

        // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
        _line: $ => seq(choice(
                $.equate,
                $.macro,
                $._macro_label,
                $._command,
                $._command_label,
                $.opcode,
                $._opcode_label,
                $._label_definition,
            ),
            choice(optional($.doc),optional($.comment)),
            $._line_break),

        pc_expr: $ => '*',

        binary_expression: $ => {
            return choice(...BIN_OPS.map(([operator, precedence, name]) => {
                return prec.left(precedence,
                    seq(
                        field('left', $._expression),
                        field('operator', operator),
                        field('right', $._expression)
                    )
                )
            }));
        },

        string_literal: $ => seq(
            '"',
            repeat(choice(
                token.immediate(prec(1, /[^\\"\n]+/)),
                $.escape_sequence
            )),
            '"',
        ),

        _expression: $ => choice(
            $.binary_expression,
            $.unary_expression,
            $._identifier,
            $._number_literal,
            $.char_literal,
            $.pc_expr,
            $.parenthesized_expression,
            $.call_expression,
        ),

        call_expression: $ => seq(
            field('function', $._identifier),
            '(',
            commaSep($._expression),
            ')',
        ),

        _regsets: $ => seq(alias($.regset_mnemonics, $.mnemonic), $.reg_set),
        _xfers: $ => seq(alias($.xfer_mnemonics, $.mnemonic), $.reg_xfer),
        operand: $ => choice($.immediate, $.extended, $.direct_page, $._indexed),

        immediate: $ => seq('#', $._expression),
        equate: $ => seq($._identifier, ':', asRegex('equ'), $._expression),

        // Regs
        x: $ => /X|x/,
        u: $ => /U|u/,
        _index_reg: $ => choice($.s, $.u, $.x, $.y),

        constant_offset: $ => seq(optional('>'), $._expression, ',', $._index_reg),
        _indexed: $ => choice($.indirect, $._indexed_direct),

        mnemonic: $ => prec(1, MNEMONICS_REGEX),

        opcode: $ => choice($._xfers, $._regsets, $.mnemonic, $._opcode_arg),

        _opcode_arg: $ => seq(
            $.mnemonic,
            $.operand),

        _identifier: $ => choice($.local_label, $.label, $.scoped_label),

        // `Name::field` — scoped names (relative). The label regex itself
        // is dot-free per segment; `::` separates scope segments.
        // Absolute names (`::a::b`) are covered by global_scoped_id in
        // import position.
        scoped_label: $ => seq(
            $.label,
            repeat1(seq('::', $.label)),
        ),

        label: $ => $._global_label,
        _global_label: $ => /[a-zA-Z_.][a-zA-Z0-9_.]*/,


        // comment: $ => choice(
        //     /;(.*)/,
        //     /\/\/(.*)/
        // ),

        // numbers
        hex_num: $ => mkDigits(choice("$", "0x"), /[0-9a-fA-F]/),
        // Float literal: digits, dot, digits. Needs digits after the dot,
        // so the `..` range operator can never be confused with it.
        float_num: $ => token(/[0-9]+[_0-9]*\.[0-9]+[_0-9]*/),
        dec_num: $ => token(/[0-9]+[_0-9]*/),
