gazm-plugin/treesitter-gazm/test/corpus/doc.txt
==================
Docs
==================

hello:
;;; Hello
;;; Hello2
;;; Hello3
[[cakjakjkaj]]

hello: ;;; Doc

---
(source_file
    (label)
    (doc (doc_text))
    (doc (doc_text))
    (doc (doc_text))
    (long_doc (long_doc_text))
    (label)
    (doc (doc_text)))
