gazm-plugin/treesitter-gazm/test/corpus/macros.txt
================
Structs
==================

    macro write_rom(id,size) {

    }

---
(source_file
      (macro_def
        (label)
        (macro_args
          (label)
          (label))
        (macro_body)))
